<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeOrder">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:text="Montreal Art Gallery"
            android:textColor="#40FFFFFF"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Make Order"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MakeOrder_label" />

        <EditText
            android:id="@+id/address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint" />

        <EditText
            android:id="@+id/productID_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productID_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="searchProductByID"
            android:text="@string/SearchProductByID_button" />


        <TextView
            android:id="@+id/productInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#33FF5B"
            android:visibility="gone" />
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_label" />

        <EditText
            android:id="@+id/CardNo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/backCardNumber_hint" />

        <EditText
            android:id="@+id/CVVcode_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CVVcode_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryMethod_label" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mail" />

            <RadioButton
                android:id="@+id/radio_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pickup" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="placeOrder"
            android:text="@string/placeOrder_button" />

        <TextView
            android:id="@+id/order_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:visibility="gone" />
        />

        <TextView
            android:id="@+id/order_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#33FF36"
            android:visibility="visible" />
        />


    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>