<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:text="Montreal Art Gallery"
            android:textColor="#40FFFFFF"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Customer Profile"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/linearLayout">

        <TextView
            android:id="@+id/cutsomer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Name:"
            android:textColor="#FF9800"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/cutsomer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Customer:"
            android:textColor="#FF9800"
            android:textSize="23dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"

        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/new_name_input_box"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/new_name_hint" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#8F00FF0D"
            android:onClick="changeName"
            android:text="@string/change_name" />
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            android:text="sample error"
            android:textColor="#FF0000"
            android:textSize="23dp" />

        <EditText
            android:id="@+id/new_password_input_box"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password_input_box"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#8B00CCFF"
            android:onClick="changePassword"
            android:text="@string/change_password" />



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>